wip: disable attachments for now. fix webkit scrollbar.
Refs: #196 #485

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -103,6 +103,31 @@ button {
   transition: border-color 0.25s;
 }
 
+/* WebKit Browsers */
+::-webkit-scrollbar {
+  width: 6px !important;
+  height: 6px !important; /* For horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent !important;;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2) !important;;
+  border-radius: 10px !important;;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4) !important;;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin !important;;
+  scrollbar-color: rgba(0, 0, 0, 0.2) transparent !important;;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
